# appr

./: .appveyor.yml  .codecov.yml  .coverage-unit.ini  .coveralls.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  .style.yapf  .travis.yml  AUTHORS.rst  Changelog.md  Dockerfile  Dockerfile.base  MANIFEST.in  Makefile  README.md  appr-pip.Dockerfile  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_tests.txt  run-server.sh  setup.cfg  setup.py  setup.py.b  tox.ini
Documentation/: cnr-api-swagger.yaml  quick-start.md  tests
Documentation/server/: appr-api-swagger.yaml  local-cnr-registry.md
appr/: __init__.py  auth.py  client.py  config.py  discovery.py  display.py  exception.py  pack.py  packager.py  render_jsonnet.py  semver.py  template_filters.py  utils.py
appr/api/: app.py  builder.py  config.py  deployment.py  gevent_app.py  gunicorn_app.py  info.py  registry.py  wsgi.py
appr/commands/: channel.py  cli.py  cli_pkg.py  command_base.py  config.py  delete_package.py  deploy.py  generate.py  helm.py  inspect.py  jsonnet.py  list_package.py  login.py  logout.py  plugins.py  pull.py  push.py  remove.py  runserver.py  show.py  version.py
appr/controller/: kubectl.py  models.py  readme.md
appr/formats/: __init__.py  (+3 more)
cnr/: __init__.py  exception.py  packager.py  semver.py  utils.py
cnr-server/: .#AUTHORS.rst  .codeclimate.yml  .dockerignore  .gitlab-ci.yml  .pylintrc  .pypirc  .travis.yml.back  ChangeLog  Makefile  demo.yaml  index.yaml  requirements_dev.txt  run-server.sh  setup.cfg  setup.py  t2  talks.md  test.md
cnrclient/: __init__.py  auth.py  client.py  command.py  config.py  discovery.py  display.py  pack.py  utils.py
tests/: conftest.py  test_auth.py  test_deploy.py  test_display.py  test_manifest.py  test_packager.py  test_registry.py  test_semver.py  test_template_filters.py  test_utils.py  wip_test_new.py
(+186 files in other folders)
