[bumpversion]
current_version = 0.7.4
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:VERSION]

[bumpversion:file:appr/__init__.py]

[wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120

[pep8]
exclude = docs
max-line-length = 120


[metadata]
name=appr
version=0.7.4
description=cloud-native app registry server
long_description= file: README.md
author=Antoine Legrand
author_email=2t.antoine@gmail.com
url=https://github.com/app-registry/appr-server
keywords=
        apprclient
        apprclientpy
        kubernetes
classifiers=
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        Natural Language :: English
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7

license=Apache License version 2
[options]
python_requres = >=3.6

include_package_data = True
scripts =
        bin/appr
        bin/apprc
package_dir =
        appr=appr
packages =
        appr
        appr.commands
        appr.plugins
        appr.formats
        appr.platforms
        appr.jsonnet
        appr.formats.helm
        appr.formats.appr
        appr.tests
        appr.api
        appr.api.impl
        appr.models
        appr.models.kv
        appr.models.kv.etcd
        appr.models.kv.redis
        appr.models.kv.filesystem

install_requires=
        flask

zip_safe=False
setup_requires=
        pytest-runner

test_suite=tests

dependency_links=
        https://github.com/requests/requests/tarball/master#egg=requests
tests_require=
    pytest
    coverage
    pytest-cov
    pytest-ordering
    requests-mock
    coverage>=4.0
    flake8
    pytest-flask>=0.10.0
    tox>=2.1.1
    sphinxcontrib-napoleon
    gunicorn>=0.19


[options.packages.find]
where = appr
